--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ body {
     margin-left: 10px;
 }
 
+.link {
+    text-decoration: none;
+    color: #A8A8A8;
+}
+
 .project-bracket {
     font-style: normal;
     font-weight: normal;
@@ -102,6 +107,7 @@ body {
     line-height: 24px;
     color: #000000;
 }
+
 
 
 /* work styles */
